# Neonatal-incubator-with-response-to-apnea-episodes

./: .gitignore  EMGdi_Episodes_Simulation.ipynb  EMGdi_Estimation.ipynb  README.md  Simulated_Central_Apnea_ID.ipynb
Frequency_control/: 30_input.csv  40_input.csv  50_input.csv  60_input.csv  70_input.csv  captura_20250516_153942.csv  emg_ad.py
Frequency_control/Controller/: CMakeLists.txt  main.cpp
Frequency_control/data.c/: CMakeLists.txt  read_encoder_ticks.cpp  try.c
Frequency_control/motor_identification/: CMakeLists.txt  main.cpp
UserInterface/: detector_apnea.py  ignore.ipynb  main.py  pyproject.toml  udp_network_diagram
