[project]
name = "interfaz"
version = "0.1.0"
description = ""
authors = [
    {name = "Santiagoflorido500",email = "sflorido@celerix.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (==1.26.4)",
    "tensorflow (==2.16.1)",
    "matplotlib (>=3.10.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
